<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.fishe.heehanxiang_tut3.compositeplot">


    <com.example.fishe.heehanxiang_tut3.MySurfaceView
        android:id="@+id/surfaceView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <SeekBar
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:id="@+id/seekbar1"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:text="@string/tv_freq"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:id="@+id/textView1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <SeekBar
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:id="@+id/seekbar2"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:text="@string/tv_phase"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:id="@+id/textView2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <SeekBar
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:id="@+id/seekbar3"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:text="@string/tv_amp"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:id="@+id/textView3" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cos" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <SeekBar
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:id="@+id/seekbarCos1"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:text="@string/tv_freq"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:id="@+id/textViewCos1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <SeekBar
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:id="@+id/seekbarCos2"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:text="@string/tv_phase"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:id="@+id/textViewCos2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <SeekBar
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:id="@+id/seekbarCos3"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:text="@string/tv_amp"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:id="@+id/textViewCos3" />

    </LinearLayout>
    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/btn_go_back_to_calling_activity"
        tools:layout_editor_absoluteX="3dp"
        tools:layout_editor_absoluteY="0dp" />

</LinearLayout>

